--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 </head>
 
 <body>
-    <!-- 1.Створіть Header сторінки. Задайте йому класс header.  -->
+ <header></header>   <!-- 1.Створіть Header сторінки. Задайте йому класс header.  -->
 
         <!-- 2.Стовірть контейнер для елементів верхнього блоку. Задайте йому класс header-container та container. -->
 
@@ -58,4 +58,123 @@
 </body>
 
 </html>
+</html>
+
+
+
+
+
+
+
+
+<!-- Об'явлення типу документа і мови сторінки -->
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <!-- Метаінформація про сторінку -->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Заголовок сторінки -->
+    <title>Назва вашої сторінки</title>
+
+    <!-- Підключення зовнішніх стилів -->
+    <link rel="stylesheet" href="./assets/css/styles.css">
+    <link rel="stylesheet" href="./assets/css/reset.css">
+
+</head>
+
+<body>
+    <!-- 1. Основна частина сторінки починається тут. Задайте клас main -->
+
+        <!-- 2. Тут починається секція. Задайте клас start і container -->
+
+            <!-- 3. Створіть контейнер та задайте йому клас solution-container -->
+
+                <!-- 4. Ствоірть внутрішній контейнер для основної інформації. Задайте йому клас start-inner -->
+
+                    <!-- 4.1. Створіть заголовок першого рівня, головний заголовок сторінки. Задайте йому клас start-title -->
+
+                    <!-- 4.2 Створіть текст з описом, де ми розповідаємо про те, що ми робимо. Задайте йому клас start-article.
+                    Сам текс - We have over 15 year exprience in business consultting arena. We have
+                        over 15 year exprience in business consultting arena and artficial intelligence.-->
+>
+                    <!-- 5. Ствірть контейнер для кнопки, які дозволяють користувачеві виконувати різні дії. Задайте класс start-buttons -->
+
+                        <!-- 5.1. Створіть кнопку. Задайте класс button та tart-button -->
+
+                            <!-- 5.1.1 Створіть посилання в середині якого Join Us. -->
+
+                        <!-- 5.2. Створіть кнопку. Задайте класс start-button-video -->
+
+                            <!-- 5.2.1. Створіть іконку через тег img (start__button-video.svg). -->
+
+                            <!-- 5.2.2. Створіть текст на кнопці Watch video  -->
+ 
+                <!-- 6. Створіть основне зображення, яке показує людину. (start__dude.png). Задайте клас start-img  -->
+
+
+</body>
+
+</html>
+
+
+
+
+
+
+
+
+
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <!-- fonts     -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+        href="https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,300;9..40,400;9..40,500;9..40,700&display=swap"
+        rel="stylesheet" />
+
+    <!-- css -->
+    <link rel="stylesheet" href="assets/css/main.css" />
+
+    <!-- reset -->
+    <link rel="stylesheet" href="assets/css/reset.css" />
+</head>
+
+<body>
+       <!-- 1. Створіть секцію. Задайте клас information -->
+
+        <!-- 2. Створіть контейнер для контенту секції "Послуг". Задайте класс container-->
+
+            <!-- 2.1 Створіть заголовок секції "Послуг" в якій буде "Наші Послуги". Задайте класс service-title -->
+
+            <!-- 2.2 Створіть контейнер(класс service-text) в якому буде, 2.2.1 текст(класс service-article). Сам текст - Ми перетворюємо інформацію в практичні інсайти. Ми працюємо, щоб розуміти ваші проблеми<br>
+                і маємо мету ставити кращі питання в прагненні досягнення результатів у роботі.  -->
+
+            <!-- 3. Створіть контейнер елементів "Послуг" Задайте класс service-items -->
+
+
+                <!-- 3.1 Створіть контейнер для Елемент Послуги 1.Задайте класс service-item -->
+
+                    <!-- 3.1.1 Створіть іконку елемента Послуги. Задайте класс service-item-icon  -->
+
+
+                    <!-- 3.1.2 Створіть заголовок елемента Послуги. Задайте йому класс service-item-title. Сам заголовок - Управління Замовленнями  -->
+
+                    <!-- 3.1.3 Створіть текст елемента Послуги. Задайте йому класс service-item-article  -->
+
+                    <!-- 3.1.4 Ствоірть посилання елемента Послуги с тегом span, а також в саме посилання додайте іконку. Задайте йому класс service-item-link. Текст - Дізнатися більше -->
+                <!-- Тут закінчується контейнер  -->
+
+                <!-- Повторіть ще два рази створення контейнеру для Елемента Послуги. -->
+     
+</body>
+
 </html>
